--- a/react/styles.global.css
+++ b/react/styles.global.css
@@ -8,3 +8,12 @@
   vertical-align: top;
   white-space: normal;
 }
+
+.admin-ui-example-1gkbr0w{
+  color: black !important;
+}
+
+.admin-ui-example-18phhmj {
+  color: black !important;
+  background-color: lightgray;
+}
